[gd_scene load_steps=5 format=3 uid="uid://by84k0dstw0hp"]

[ext_resource type="Script" path="res://environment/world/game_manager.gd" id="1_8aikk"]

[sub_resource type="SystemFont" id="SystemFont_1p6jq"]
font_names = PackedStringArray("Century", "Ebrima", "Gabriola", "High Tower Text", "Goudy Old Style", "Gigi")

[sub_resource type="SystemFont" id="SystemFont_yto27"]
font_names = PackedStringArray("Sitka Text", "Segoe UI")

[sub_resource type="LabelSettings" id="LabelSettings_hymfn"]
font_size = 30

[node name="GameManager" type="Node"]
script = ExtResource("1_8aikk")

[node name="CycleTimer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TimerLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_1p6jq")
theme_override_font_sizes/font_size = 70
text = "2:30"

[node name="OrderLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yto27")
theme_override_font_sizes/font_size = 65
text = "колор "
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time left!
Your score: *your_score*"
label_settings = SubResource("LabelSettings_hymfn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Играть"

[connection signal="timeout" from="CycleTimer" to="." method="_on_cycle_timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
